fixes address and election name overlap in thin views and fixes voter resource information dropping in down below first contest

--- a/src/sass/map-view.sass
+++ b/src/sass/map-view.sass
@@ -174,11 +174,16 @@
         margin-top: -30px
         margin-right: 2px
 
+      div 
+        width: 85%
+
       .date
         font-size: 16px
 
+
     .address-line
       font-size: 16px
+      width: 85%
 
     #location
       .address-line
